--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "mongoose": "^8.16.0"
+    "mongoose": "^8.16.0",
+    "express": "^4.18.2",
+  "multer": "^1.4.5",
+  "cors": "^2.8.5"
   }
 }
